@@ -25,6 +25,7 @@
 @define function inputline2 ();
 
 @define function setinfileenc ();
+@define function setstdinenc ();
 
 @define function fromJIS ();
 @define function fromEUC ();
